modifications mineures sur les boutons et la map (positionnement)

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
               </div>
 
-              <div class=" d-flex col-xs-12 justify-content-start pl-3 pl-sm-3 mt-3 mt-0">
+              <div class="d-flex col-xs-12 justify-content-start pl-3 pl-sm-3 mt-3 mt-0 index-bouton-voir-indices">
 
             <button type="button" class="btn btn-secondary">Voir tous les indices</button>
 
@@ -163,14 +163,14 @@
 
         <!-- Colonne de droite avec la Google Map (placeholder pour le moment) 
              Cette section utilise également des breakpoints pour ne pas empiéter sur la colonne de gauche
-             La carte en 650x450 est changée par une autre map en 250x450 lorsqu'un breakpoint est atteint
+             La carte en 1200x450 est changée par une autre map en 1200x450 lorsqu'un breakpoint est atteint
         -->
 
         <div class='col-lg-7 col-md-12 col-sm-12 d-flex justify-content-center align-items-center pt-3'>
 
-          <iframe src="https://www.google.com/maps/d/embed?mid=1KMVIKgHS16P9GlCBoIMyoMlGeftSmg-H" width="1200" height="450" class="index-map-constrainMyMap"></iframe>
+          <iframe src="https://www.google.com/maps/d/embed?mid=1KMVIKgHS16P9GlCBoIMyoMlGeftSmg-H" width="1200" height="600" class="index-map-constrainMyMap"></iframe>
 
-          <iframe src="https://www.google.com/maps/d/embed?mid=1KMVIKgHS16P9GlCBoIMyoMlGeftSmg-H" width="1200" height="450" class="index-map-showMyMap"></iframe>
+          <iframe src="https://www.google.com/maps/d/embed?mid=1KMVIKgHS16P9GlCBoIMyoMlGeftSmg-H" width="1200" height="600" class="index-map-showMyMap"></iframe>
 
           <!--
             <img src="https://via.placeholder.com/650x450" alt="map" class="img-fluid index-map-constrainMyMap">
