Ajout image winner + final tweaks text winner

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         <div class="col-md-3 d-flex align-items-center">
           <div class="img-fluid d-flex align-items-center">
-          <img src="images/winner.png" class="img-fluid d-flex winner_photo align-items-center">
+          <img src="images/winner.jpeg" class="img-fluid d-flex winner_photo rounded-circle align-items-center">
         </div>
         </div>
     
@@ -217,12 +217,12 @@
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
             pariatur."</p>
-          <p class="winner_signature winner-citation"><small>Paolo Catalini - Grand gagnant Aout 2018</small></small></p>
+          <p class="winner_signature winner-citation"><small>Paolo Catalani - Grand gagnant Aout 2018</small></small></p>
         </div>
     
         <div class="col-md-3 winner-box-soumettre">
           <div class="winner_soumettre">
-          <h2>Tu peux gagner un cadeau Wild !</h2>
+          <h2 class="pl-1 pr-1">Tu peux gagner un cadeau Wild !</h2>
           <button type="button" class="btn btn-primary winner-bouton">Soumets ta réponse</button>
           <button type="button" class="btn btn-primary winner-bouton-2">Ma réponse</button>
           </div>
