modif image contact + structure

--- a/concept_contact.html
+++ b/concept_contact.html
@@ -11,35 +11,45 @@
 		</head>
 
 		<body>
-			<!-- HEADER -->
-			<nav class="navbar navbar-expand-sm navbar-light bg-light">
-				
-				<img class="navbar-brand" src="images/logo.png">
-				<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarMenu">
+			<!--
+      #############
+       H E A D E R 
+       ############
+      -->
+	    <header>  
+	      <nav class="navbar navbar-expand-sm navbar-light bg-light">
+	        
+	        <img class="navbar-brand" src="images/logo.png">
+	        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+	          <span class="navbar-toggler-icon"></span>
+	        </button>
+	        <div class="collapse navbar-collapse" id="navbarMenu">
 
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item">
-							<a href="#" class="nav-link"> L'énigme du mois </a>
-						</li>
-						<li class="nav-item">
-							<a href="#" class="nav-link"> Enigmes résolues </a>
-						</li>
-						<li class="nav-item">
-							<a href="#" class="nav-link"> Règles du jeu </a>
-						</li>
-						<li class="nav-item" >
-							<a href="#" class="nav-link"> Votre solution </a>
-						</li>
-						<li class="nav-item" >
-							<a href="#" class="nav-link"> Le maître du jeu </a>
-						</li>
-					</ul>
-				</div>	
-			</nav>
-			<!-- FIN HEADER -->
+	          <ul class="navbar-nav ml-auto">
+	            <li class="nav-item">
+	              <a href="#" class="nav-link"> L'énigme du mois </a>
+	            </li>
+	            <li class="nav-item">
+	              <a href="#" class="nav-link"> Enigmes résolues </a>
+	            </li>
+	            <li class="nav-item">
+	              <a href="#" class="nav-link"> Règles du jeu </a>
+	            </li>
+	            <li class="nav-item" >
+	              <a href="#" class="nav-link"> Votre solution </a>
+	            </li>
+	            <li class="nav-item" >
+	              <a href="#" class="nav-link"> Le maître du jeu </a>
+	            </li>
+	          </ul>
+	        </div>  
+	      </nav>
+	    </header>
+	      <!--
+	      ###################
+	       F I N  H E A D E R 
+	       ##################
+	      -->
 
 			<!-- CONCEPT -->
 			<section>
@@ -87,20 +97,20 @@
 			C O N T A C T 
 			################## 
 			-->
-			<!-- CONTACT -->
+
 		    <div class="alert alert-secondary" role="alert">
 				<h2> Solution / Contact </h2>
 			</div>
-			<div class="container">
+			<div class="container-fluid">
 				<!-- Image -->		
-				<div class="row justify-content-center">
-					<div class="col-md-5">
-						<img class="img-paris" src="images/image_contact.jpg">
+				<div class="row">
+					<div class="col-md-6">
+						<img class="img-paris" src="images/contact.jpg">
 					</div>
 
 				<!-- Formulaire -->
 
-				<div class="col-md-7 ">
+				<div class="col-md-6">
 					<div id="contact" class="contact">
 						<div class="input group input-group-lg">
 							<input type="texte" class="form-control" aria-describedby="sizaing-addon1" placeholder="Nom">
@@ -201,5 +211,5 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
-			</body>
+		</body>
 	</html>
