--- a/concept_contact.html
+++ b/concept_contact.html
@@ -103,13 +103,12 @@
 			</div>
 			<div class="container-fluid">
 				<!-- Image -->		
-
 				<div class="row">
 					<div class="col-md-6">
 						<img class="img-paris" src="images/contact.jpg">
+					</div>
 
 				<!-- Formulaire -->
-
 
 				<div class="col-md-6">
 					<div id="contact" class="contact">
