bon alignement contact

--- a/concept_contact.html
+++ b/concept_contact.html
@@ -107,6 +107,7 @@
 				<div class="row">
 					<div class="col-md-6">
 						<img class="img-paris" src="images/contact.jpg">
+					</div>
 
 				<!-- Formulaire -->
 
