--- a/enigme-page.html
+++ b/enigme-page.html
@@ -468,17 +468,19 @@
         </div><!--end div d-none d-block-->
       </section>
       
-      <section class="container-fluid">
+      <!--
+      ###############
+      CARROUSEL
+      ###############
+      -->
+      <section class="container-fluid enigme_cours_fluid">
 
-        <div class="row justify-content-center d-sm-block d-md-none encours_carrousel_row">
-          <div id="carouselExampleControls" class="carousel slide col-md-8 col-lg-10" data-ride="carousel">
+        <div class="row justify-content-center d-sm-block d-md-none no-gutters-enigme encours_carrousel_row">
+          <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
 
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100 enigme_cours_img" src="images/photo12.jpg" alt="First slide">                     
-              </div>
-              <div class="carousel-item encours-img">
-                <img class="d-block w-100 enigme_cours_img" src="images/photo13.jpg" alt="Second slide">
               </div>
               <div class="carousel-item encours-img">
                 <img class="d-block w-100 enigme_cours_img" src="images/photo15.jpg" alt="Third slide">
@@ -499,6 +501,12 @@
           </div>
         </div>
       </section>
+       <!--
+      ###############
+      E N D CARROUSEL
+      ###############
+      -->
+
     <!--
     ################################
     E N I G M E  P R é C é D E N T E
