--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
      <!-- Les images de l'ecran d'acceuil devraient être en 2000x800 -->
 
-                <img class="d-block w-100" src="https://via.placeholder.com/2000x800" alt="First slide">
+                <img class="d-block w-100" src="images/paris01index.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/2000x800" alt="Second slide">
+                <img class="d-block w-100" src="images/paris02index.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/2000x800" alt="Third slide">
+                <img class="d-block w-100" src="images/paris03index.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
