--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
       <div class="row align-items-center justify-content-center">
 
         <div class="col-md-3 d-flex align-items-center">
-          <div class="img-fluid d-flex align-items-center">
-          <img src="images/winner.jpeg" class="img-fluid d-flex winner_photo rounded-circle align-items-center">
+          <div class="img-fluid d-flex justify-content-center align-items-center">
+          <img src="images/winner.jpeg" class="img-fluid d-flex winner_photo rounded-circle justify-content-center align-items-center">
         </div>
         </div>
     
