--- a/enigme-page.html
+++ b/enigme-page.html
@@ -513,12 +513,14 @@
     ################################
     -->
     <div class="container-fluid">
+       <div class="alert alert-secondary alerte_enigme_prec" role="alert">
+            <h2>L'égnime du mois précédent </h2>
+        </div>
       <div id="enigne_du_mois_precedent" class="row past-enig-pre"> 
 
         <!--présentation de l'énigme du mois prédédent-->
         <div class="col-lg-12 col-sm-12 col-xs-12">
-          <h2>L'énigme du mois précédent</h2>
-          <hr/>
+                   <hr/>
           <h3>Titre de l'énigme</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipisci</p>
         </div>
