--- a/enigme-page.html
+++ b/enigme-page.html
@@ -520,7 +520,6 @@
 
         <!--présentation de l'énigme du mois prédédent-->
         <div class="col-lg-12 col-sm-12 col-xs-12">
-                   <hr/>
           <h3>Titre de l'énigme</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipisci</p>
         </div>
@@ -550,12 +549,12 @@
            <img class="prec_img_enigme" src="images/photo12.jpg" alt="#"/>
         </div>
         <!--carousel-->   
-        <div class="col-12 d-sm-block d-md-none">
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div class="col-12 d-sm-block d-md-none pl-0 pr-0">
+          <div id="carousel-enigme-prec " class="carousel slide" data-ride="carousel">
                   <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carousel-enigme-prec" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-enigme-prec" data-slide-to="1"></li>
+                    <li data-target="#carousel-enigme-prec" data-slide-to="2"></li>
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -568,11 +567,11 @@
                       <img class="d-block w-100 prec_indice_enigme" src="images/photo13.jpg"  alt="Third slide">
                     </div>
                   </div>
-                  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <a class="carousel-control-prev" href="#carousel-enigme-prec" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                   </a>
-                  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <a class="carousel-control-next" href="#carousel-enigme-prec" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                   </a>
