--- a/enigme-page.html
+++ b/enigme-page.html
@@ -64,7 +64,7 @@
 
       <section class="container-fluid"">
         <div class="alert alert-secondary titre_h2_enigme" role="alert">
-           <h2>L'égnime du mois</h2>
+           <h2>L'énigme du mois</h2>
         </div>
         <div class="row encours_titre_enigme">
           <div class="col-lg-4">
