Essai 1 et non final du responsive de la partie contact

--- a/concept_contact.html
+++ b/concept_contact.html
@@ -104,13 +104,13 @@
 			<div class="container-fluid">
 				<!-- Image -->		
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-6 d-flex justify-content-end">
 						<img class="img-paris" src="images/contact.jpg">
 					</div>
 
 				<!-- Formulaire -->
 
-				<div class="col-md-6">
+				<div class="col-md-6 d-flex justify-content-start">
 					<div id="contact" class="contact">
 						<div class="input group input-group-lg">
 							<input type="texte" class="form-control" aria-describedby="sizaing-addon1" placeholder="Nom">
