--- a/concept_contact.html
+++ b/concept_contact.html
@@ -59,32 +59,43 @@
 					</div>
 					<div class="row align-items-center">
 						<div class="col-md-5 p-3">
-							<img src="https://via.placeholder.com/450x450" class="centrer_photo">
+				          	<div class="img-fluid d-flex justify-content-center align-items-center">
+				          		<img src="https://via.placeholder.com/450x450" class="img-fluid d-flex justify-content-center align-items-center">
+				        	</div>
 						</div>
-						<div class="col-md-7 p-3">
+						<div class="col-md-7 p-5">
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes.</p>
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis.</p>
 						</div>
 					</div>
-					<h2>Les règles</h2>
+					<h2 class="title_roles">Les règles</h2>
 					<div class="row align-items-center">
 						<div class="col-md-2 p-3">
-							<img src="images/number1.png" class="centrer_photo">
+							<div class="img-fluid d-flex justify-content-center align-items-center">
+				          		<img src="images/number1.png" class="img-fluid d-flex justify-content-center align-items-center">
+				        	</div>
+							<!--<img src="images/number1.png" class="centrer_photo">-->
 						</div>
-						<div class="col-md-10 p-3">
+						<div class="col-md-10 p-5">
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
 						</div>
 						<div class="col-md-2 p-3">
-							<img src="images/number2.png" class="centrer_photo">
+							<!--<img src="images/number2.png" class="centrer_photo">-->
+							<div class="img-fluid d-flex justify-content-center align-items-center">
+				          		<img src="images/number2.png" class="img-fluid d-flex justify-content-center align-items-center">
+				        	</div>
 						</div>
-						<div class="col-md-10 p-3">
+						<div class="col-md-10 p-5">
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
 						</div>
 						<div class="col-md-2 p-3">
-							<img src="images/number3.png" class="centrer_photo">
+							<!--<img src="images/number3.png" class="centrer_photo">-->
+							<div class="img-fluid d-flex justify-content-center align-items-center">
+				          		<img src="images/number3.png" class="img-fluid d-flex justify-content-center align-items-center">
+				        	</div>
 						</div>
-						<div class="col-md-10 p-3">
+						<div class="col-md-10 p-5">
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
 						</div>
 					</div>
