--- a/enigme-page.html
+++ b/enigme-page.html
@@ -580,7 +580,7 @@
           
         </div>
         <div class="col-lg-2  col-md-4 col-sm-6 col-xs-12 last-winner ">
-          <img src="images/winner.jpeg" alt=".img-gagnant" class="img-gagnant rounded-circle">
+          <img src="images/Abdou-Rahim.png" alt=".img-gagnant" class="img-gagnant rounded-circle">
         </div><!--historique de l'énigme prédédente-->
         <div class="col-lg-8 col-md-6 col-sm-12 col-xs-12 last-winner">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enimLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
