--- a/enigme-page.html
+++ b/enigme-page.html
@@ -555,7 +555,7 @@
     -->
     <div class="container-fluid">
        <div class="alert alert-secondary alerte_enigme_prec" role="alert">
-            <h2>L'égnime précédente </h2>
+            <h2>L'énigme précédente </h2>
         </div>
       <div id="enigne_du_mois_precedent" class="row past-enig-pre"> 
 
@@ -595,22 +595,22 @@
         </div>
         <!--carousel-->   
         <div class="col-12 d-sm-block d-md-none pl-0 pr-0">
-          <div id="carousel-enigme-prec " class="carousel slide" data-ride="carousel">
+            <div id="carousel-enigme-prec" class="carousel slide" data-ride="carousel">
                   <ol class="carousel-indicators">
                     <li data-target="#carousel-enigme-prec" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-enigme-prec" data-slide-to="1"></li>
                     <li data-target="#carousel-enigme-prec" data-slide-to="2"></li>
                   </ol>
                   <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img class="d-block w-100 prec_indice_enigme" src="images/photo11.jpg"  alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100 prec_indice_enigme" src="images/photo12.jpg"  alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100 prec_indice_enigme" src="images/photo13.jpg"  alt="Third slide">
-                    </div>
+                      <div class="carousel-item active">
+                    <img class="d-block w-100" src="images/photo11.jpg"  alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/photo12.jpg"   alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/photo13.jpg" alt="Third slide">
+                      </div>
                   </div>
                   <a class="carousel-control-prev" href="#carousel-enigme-prec" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
