--- a/concept_contact.html
+++ b/concept_contact.html
@@ -69,9 +69,9 @@
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis.</p>
 						</div>
 					</div>
-					<h2 class="title_roles">Les règles</h2>
+					<h2 id="title_roles">Les règles</h2>
 					<div class="row align-items-center">
-						<div class="col-md-2 p-3" style="background-color: red;">
+						<div class="col-md-2 p-3">
 							<img src="images/number1.png" class="centrer_photo">
 						</div>
 						<div class="col-md-10 p-3">
