--- a/enigme-page.html
+++ b/enigme-page.html
@@ -896,7 +896,7 @@
                 <a href="#" class="indice_hover" data-toggle="modal" data-target="#myModal11-prec">
                   <div class="background_hover"></div>
                     <div class="clue_number">
-                      <p class="white_color">Indice 11</p>
+                      <p class="color_clue">Indice 11</p>
                       <img src="images/zoom_gris.png" alt="#"/>
                     </div>
                 </a>
@@ -950,7 +950,8 @@
         <!-- <a href="#see-more"  aria-expanded="false" aria-controls="see-more"data-toggle="collapse"><img src="images/see-more.png"></a> -->
         <div class="collapse" id="see-more" >
             <!-- Debut see more -->
-            <div class="container-fluid">
+             <div class="background_past_enigme">
+               <div class="container-fluid">
               <div class="alert alert-secondary alerte_past_enigme_prec" role="alert">
                 <h2>L'énigme précédente </h2>
               </div>
@@ -964,9 +965,6 @@
               </div>
       <!--fin de la présentation-->
       <!--nouvelle présentation de l'énigme précédente-->
-     <!--  <div class="row past-enig-pre">
-        <div class="col-lg-12 "><h4>Gagnant du mois précédent</h4></div>
-      </div> -->
               <div class="row past-enig-pre align-items-center">
                 <div class="col-lg-2  col-md-2 col-sm-6 col-xs-12 last-winner  align-self-center">
                   <h5>Gagnant du mois précédent</h5>
@@ -1292,7 +1290,7 @@
                       <a href="#" class="indice_hover" data-toggle="modal" data-target="#myModal11-prec">
                         <div class="background_hover"></div>
                           <div class="clue_number">
-                            <p class="white_color">Indice 11</p>
+                            <p class="color_clue">Indice 11</p>
                             <img src="images/zoom_gris.png" alt="#"/>
                           </div>
                       </a>
@@ -1337,10 +1335,15 @@
                     </div>
               </div>
             </section>
-            <div class="col-lg-3 col- btn-see-more justify-content-center ">
-                <button type="button" class="btn btn-primary btn-lg" href="#see-more" aria-expanded="false" aria-controls="see-more"data-toggle="collapse">Voir Moins</button>
-            </div>
+            
 
+
+           
+
+             </div>
+             <div class="col-lg-3 col- btn-see-more justify-content-center ">
+                <button type="button" class="btn btn-primary btn-lg" href="#see-more" aria-expanded="false" aria-controls="see-more"data-toggle="collapse">  Voir Moins  </button>
+            </div>
             <!-- Fin see more -->
 
           </div>
