--- a/concept_contact.html
+++ b/concept_contact.html
@@ -5,11 +5,13 @@
 			  <meta charset="utf-8">
 			  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   				<!-- CSS -->
-  				<link rel="stylesheet" href="concept_contact.css">
+				  <link rel="stylesheet" href="concept_contact.css">
   					<!-- Bootstrap -->
 					<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 					<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 					<title> La Chambre Noire </title>	
+				
+					  
 		</head>
 
 
@@ -172,6 +174,10 @@
 			################## 
 			-->
 
+			<!-- SCROLL TOP -->
+			<button onclick="topFunction()" id="myBtn" title="Go to top"></button>
+			<!-- FIN SCROLL -->
+			
 
 
                 <!--
@@ -228,7 +234,24 @@
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+		<script>
+			// When the user scrolls down 20px from the top of the document, show the button
+			window.onscroll = function() {scrollFunction()};
+			
+			function scrollFunction() {
+				if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+					document.getElementById("myBtn").style.display = "block";
+				} else {
+					document.getElementById("myBtn").style.display = "none";
+				}
+			}
+			
+			// When the user clicks on the button, scroll to the top of the document
+			function topFunction() {
+				document.body.scrollTop = 0;
+				document.documentElement.scrollTop = 0;
+			}
+		</script>
 		</div>
 
 		</body>
