--- a/index.html
+++ b/index.html
@@ -241,6 +241,10 @@
       </div>
     </article>
 
+    <!-- SCROLL TOP -->
+			<button onclick="topFunction()" id="myBtn" title="Go to top"></button>
+    <!-- FIN SCROLL -->
+
     <!--
     ############
     F O O T E R
@@ -313,6 +317,24 @@
 		    clock.start();
 
 		});
-	</script>
+  </script>
+  <script>
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function() {scrollFunction()};
+    
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("myBtn").style.display = "block";
+      } else {
+        document.getElementById("myBtn").style.display = "none";
+      }
+    }
+    
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+  </script>
 </body>
 </html>
