ajouter séparation entre carte et titre ,changer police titres H2,center les titres

--- a/concept_contact.html
+++ b/concept_contact.html
@@ -57,7 +57,7 @@
 
 			<!-- CONCEPT -->
 
-			<div id="concept" class="alert alert-secondary" role="alert">
+			<div id="concept" class="alert alert-secondary titre_h2_concept" role="alert">
 				<h2> Le concept</h2>
 			</div>
 			<section class="container-fluid">
@@ -108,7 +108,7 @@
 			-->
 				<!-- Bandeau titre -->
 		
-		    <div id="contact" class="alert alert-secondary" role="alert">
+		    <div id="contact" class="alert alert-secondary titre_h2_solution" role="alert">
 					<h2> Solution / Contact </h2>
 				</div>	
 				<div class="container-fluid">
