--- a/about.html
+++ b/about.html
@@ -58,31 +58,35 @@
         -->
 
 
-    <div class="row">
+  <!--   <div class="row">
       <h2 class="col line-about">Le maitre du jeu</h2>
+
     </div>
+ -->
+    <div class="container-fluid">
 
-
-
-    <div class="row pt-4 pl-4 pr-4">
-      <div class="col-md-4 d-flex justify-content-center align-items-center">
-        <img src="images/wildo.jpg" class="img-fluid rounded pl-4 img-about" alt="#">
+      <div class="alert alert-secondary titre_h2_about" role="alert">
+          <h2>Le maitre du jeu</h2>
       </div>
-      <div class="col-md-8 pt-sm-2">
-        <p class="pt-2 text-about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse
-          lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
-          Maecenas
-          ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est
-          eleifend mi, non fermentum diam nisl sit amet erat.</p>
-        <p class="pt-2 text-about"> Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
-          Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue.</p>
-        <p class="pt-2 text-about">Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut
-          augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-          Curae;
-          Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales
-          hendrerit.</p>
+      <div class="row pt-4 pl-4 pr-4">
+        <div class="col-md-4 d-flex justify-content-center align-items-center">
+          <img src="images/wildo.jpg" class="img-fluid rounded pl-4 img-about" alt="#">
+        </div>
+        <div class="col-md-8 pt-sm-2">
+          <p class="pt-2 text-about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse
+            lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
+            Maecenas
+            ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est
+            eleifend mi, non fermentum diam nisl sit amet erat.</p>
+          <p class="pt-2 text-about"> Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
+            Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue.</p>
+          <p class="pt-2 text-about">Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut
+            augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+            Curae;
+            Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales
+            hendrerit.</p>
+        </div>
       </div>
-    </div>
 
 
 
@@ -137,8 +141,8 @@
     </div>
 
     <!-- SCROLL TOP -->
-			<button onclick="topFunction()" id="myBtn" title="Go to top"></button>
-		<!-- FIN SCROLL -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
+    <!-- FIN SCROLL -->
 
 
     <!--
@@ -183,6 +187,9 @@
         </div>
       </div>
     </div>
+    </div>
+
+   
 
 
     <!-- Optional JavaScript -->
