Changement des boutons en couleur noir !

--- a/enigme-page.html
+++ b/enigme-page.html
@@ -1356,7 +1356,7 @@
 
              </div>
              <div class="col-lg-3 col- btn-see-more justify-content-center ">
-                <button type="button" class="btn btn-primary btn-lg" href="#see-more" aria-expanded="false" aria-controls="see-more"data-toggle="collapse">  Voir Moins  </button>
+                <button type="button" class="btn btn-dark" href="#see-more" aria-expanded="false" aria-controls="see-more"data-toggle="collapse">  Voir Moins  </button>
             </div>
             <!-- Fin see more -->
 
