--- a/concept_contact.html
+++ b/concept_contact.html
@@ -134,10 +134,11 @@
 		
 									<!-- 2 BOUTONS - SOUMETTRE UNE REPONSE - PRISE DE CONTACT -->
 									<div class="form-check">
-										<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+										<input class="form-check-input" type="radio" value="option1" checked>
 											<label class="form-check-label" for="exampleRadios1">
 														Soumettre une réponse
 											</label>
+						
 									</div>
 									<div class="form-check">
 										<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
@@ -146,13 +147,13 @@
 											</label>
 									</div>
 										<!-- Message -->
-													<div class="input-group">
-														<textarea name="" id="" cols="80" rows="6" class="form-control" placeholder="Message"></textarea>
-														<button type="submit" value="Send" class="btn btn-outline-dark">Envoyer</button>
-													</div>
+									<div class="input-group">
+										<textarea name="message" cols="80" rows="6" class="form-control" placeholder="Message"></textarea>
+										<button type="submit" value="Send" class="btn btn-outline-dark">Envoyer</button>
 									</div>
 								</form>
 							</div>
+						</div>	
 					</div>
 				</div>
 		</section>
