menu center en responsive et text-align center pour les li

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarMenu">
 
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav navbar-menu-about ml-auto">
             <li class="nav-item">
               <a href="enigme-page.html" class="nav-link"> L'énigme du mois </a>
             </li>
@@ -63,7 +63,7 @@
 
     </div>
  -->
-    <div class="container-fluid">
+    <div class="container-fluid container-about">
 
       <div class="alert alert-secondary titre_h2_about" role="alert">
           <h2>Le maitre du jeu</h2>
