--- a/concept_contact.html
+++ b/concept_contact.html
@@ -29,7 +29,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 					<div class="collapse navbar-collapse" id="navbarMenu">
-									<ul class="navbar-nav ml-auto">
+									<ul class="navbar-nav navbar-menu-concept ml-auto">
 										<li class="nav-item">
 											<a href="enigme-page.html" class="nav-link"> L'énigme du mois </a>
 										</li>
