--- a/enigme-page.html
+++ b/enigme-page.html
@@ -29,7 +29,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarMenu">
 
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto navbar-menu">
               <li class="nav-item">
                 <a href="enigme-page.html" class="nav-link"> L'énigme du mois </a>
               </li>
