fichier general.css cree

--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="about.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="general.css">
   <title>La Chambre Noire</title>
 </head>
 
@@ -45,7 +45,7 @@
               <a href="concept_contact.html#contact" class="nav-link"> Votre solution </a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link"> Le maître du jeu </a>
+              <a href="about.html" class="nav-link menu-actif"> Le maître du jeu </a>
             </li>
           </ul>
         </div>
