--- a/enigme-page.html
+++ b/enigme-page.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <link rel="stylesheet" href="compiled/flipclock.css"> <!-- Script pour le compte a rebour -->
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="general.css">
       <link rel="stylesheet" href="egnime-page.css">
       <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
       
@@ -31,10 +31,11 @@
 
             <ul class="navbar-nav ml-auto navbar-menu">
               <li class="nav-item">
-                <a href="enigme-page.html" class="nav-link"> L'énigme du mois </a>
+                <a href="enigme-page.html" class="nav-link menu-actif"  > L'énigme du mois </a>
               </li>
               <li class="nav-item">
-                <a href="enigme-page.html#enigne_du_mois_precedent" class="nav-link"> Enigmes résolues </a>
+                <a href="enigme-page.html#enigne_du_mois_precedent" class="nav-link"id="first-element" data-target ="#first-element"
+                > Enigmes résolues </a>
               </li>
               <li class="nav-item">
                 <a href="concept_contact.html" class="nav-link"> Règles du jeu </a>
