--- a/concept_contact.html
+++ b/concept_contact.html
@@ -6,10 +6,11 @@
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   			<!-- CSS -->
-  			<link rel="stylesheet" href="concept_contact.css">
+  			
   			<!-- Bootstrap -->
   			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">	
 			<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+			<link rel="stylesheet" href="general.css">
 			<title> La Chambre Noire </title>
   			<!--***-->
 		</head>
@@ -34,10 +35,10 @@
 											<a href="enigme-page.html" class="nav-link"> L'énigme du mois </a>
 										</li>
 										<li class="nav-item">
-											<a href="enigme-page.html#enigne_du_mois_precedent" class="nav-link"> Enigmes résolues </a>
+											<a href="enigme-page.html#enigne_du_mois_precedent" class="nav-link "> Enigmes résolues </a>
 										</li>
 										<li class="nav-item">
-											<a href="concept_contact.html" class="nav-link"> Règles du jeu </a>
+											<a href="concept_contact.html" class="nav-link  menu-actif"> Règles du jeu </a>
 										</li>
 										<li class="nav-item" >
 											<a href="concept_contact.html#contact" class="nav-link"> Votre solution </a>
