modif image bicyclette

--- a/concept_contact.html
+++ b/concept_contact.html
@@ -122,7 +122,8 @@
 						</div>
 
 						<!-- Formulaire -->
-						<div class="col-md-6">
+						
+						<div class="col-md-7 d-flex ">
 							<div id="contact" class="contact">
 								<form action="https://formspree.io/alpaca6wild@gmail.com" method="POST">
 									<div class="input group input-group-lg">
@@ -156,7 +157,7 @@
 									</div>
 								</form>
 							</div>
-						</div>	
+						</div>		
 					</div>
 				</div>
 		</section>
@@ -194,13 +195,13 @@
 						</div>
 					</div>
 					</div>
-					<div class="col-md-4 footer_column footer_social_opacity ml-0 mr-0">
+					<div class="col-4 footer_column footer_social_opacity ml-0 mr-0">
 					<p class="footer_marginp2 ml-0 mr-0">La chambre noire sur les réseaux sociaux</p>
 					<a href="#"><img src="images/facebook.png" alt="#"/></a>
 					<a href="#"><img src="images/instagram.png" alt="#"/></a>
 					<a href="#"><img src="images/twitter.png" alt="#"/></a>
 					</div>
-					<div class="col-md-12 col-lg-4 footer_column ml-0 mr-0">
+					<div class="col-12  footer_column ml-0 mr-0">
 					<p class="footer_marginp2 ml-0 mr-0">Recevez les derniers indices par mail</p>
 
 					<form method="post" action="#" class="footer_form ml-0 mr-0">
