Changement dernière ligne du footer. Camille

--- a/concept_contact.html
+++ b/concept_contact.html
@@ -216,7 +216,7 @@
 				</footer>
 				<div class="row align-items-center footer2 ml-0 mr-0">
 					<div class="col-12 footer_column ml-0 mr-0">
-						<p class="footer_marginp ml-0 mr-0">Crédits: Alpaga | plan du site | mentions légales</p>
+						<p class="footer_marginp ml-0 mr-0">2018 - Alpaga | Plan du site | Mentions légales</p>
 					</div>
 				</div>
 				</div>  
