--- a/enigme-page.html
+++ b/enigme-page.html
@@ -1397,7 +1397,7 @@
           </footer>
           <div class="row align-items-center footer2">
               <div class="col-12 footer_column">
-                <p class="footer_marginp">Alpaga©|plan du site|mentions légales</p>
+                <p class="footer_marginp">2018 - Alpaga | Plan du site | Mentions légales</p>
               </div>
           </div>
         </div>
