--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarMenu">
 
-          <ul class="navbar-nav navbar-menu-about ml-auto">
+          <ul class="navbar-nav navbar-menu ml-auto">
             <li class="nav-item">
               <a href="enigme-page.html" class="nav-link"> L'énigme du mois </a>
             </li>
