--- a/concept_contact.html
+++ b/concept_contact.html
@@ -30,7 +30,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 					<div class="collapse navbar-collapse" id="navbarMenu">
-									<ul class="navbar-nav navbar-menu-concept ml-auto">
+									<ul class="navbar-nav navbar-menu  ml-auto">
 										<li class="nav-item">
 											<a href="enigme-page.html" class="nav-link"> L'énigme du mois </a>
 										</li>
@@ -58,10 +58,10 @@
 
 			<!-- CONCEPT -->
 
-			<div id="concept" class="alert alert-secondary titre_h2_concept" role="alert">
-				<h2> Le concept</h2>
-			</div>
-			<br><br> 
+			<div id="contact" class="alert alert-secondary titre_h2_solution" role="alert">
+				<h2> Concept </h2>
+			</div>	
+			<br><br>
 			<section class="container-fluid">
 					<div class="row align-items-center">
 						<div class="col-md-5 p-3">
