--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarMenu">
 
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav navbar-menu ml-auto">
               <li class="nav-item">
                 <a href="enigme-page.html" class="nav-link"> L'énigme du mois </a>
               </li>
