changements index + concept

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <link rel="stylesheet" href="compiled/flipclock.css"> <!-- Script pour le compte a rebour -->
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="general.css">
       <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Merriweather|Quicksand" rel="stylesheet">      
       <title>La Chambre Noire</title>
     </head>
@@ -74,7 +74,7 @@
 
      <!-- Les images de l'ecran d'acceuil devraient être en 2000x800 -->
 
-                <img class="d-block w-100" src="images/paris01index.jpg" alt="First slide">
+                <img class="d-block w-100" src="images/paris_eiffel_tower_disappear2.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="images/paris02index.jpg" alt="Second slide">
@@ -142,7 +142,7 @@
             <h2 class="justify-content-center text-center index_margin_title">L'énigme du mois: <strong>La Disparition</strong></h2>
         
             <p class="text-justify">
-                    Oh non ! La tour Eiffel a disparu ! Lorsque <strong>Wildo Coda</strong> s'est réveillé ce matin et qu'il a regardé par la fenêtre, l'impensable était arrivé. Là où la Dame de Fer se dressait fièrement seulement la veille, il n'y avait plus qu'un cratère fumant. Wildo se rendit immédiatement sur le Champ de Mars pour trouver des indices, mais la seule chose qu'il découvrit au fond du cratère fut une boite en fer blanc cabossée. A l'intérieur, une pellicule photo et un mot signé <strong>Flash Kodak</strong>:
+                    Oh non ! La tour Eiffel a disparu ! Lorsque <strong>Wildo Coda</strong> s'est réveillé ce matin et qu'il a regardé par la fenêtre, l'impensable était arrivé. Là où la Dame de Fer se dressait fièrement seulement la veille, il n'y avait plus qu'un seul étage encore fumant. Wildo se rendit immédiatement sur le Champ de Mars pour trouver des indices, mais la seule chose qu'il découvrit aux pieds de la tour fut une boite en fer blanc cabossée. A l'intérieur, une pellicule photo et un mot signé <strong>Flash Kodak</strong>:
             </p>
 
             <p class="text-justify">
