some changes in concept

--- a/concept_contact.html
+++ b/concept_contact.html
@@ -61,7 +61,7 @@
 			<!-- CONCEPT -->
 
 			<div id="concept" class="alert alert-secondary titre_h2_concept" role="alert">
-				<h2>Le concept</h2>
+				<h2 class="titre_h2_concept">Le concept</h2>
 			</div>
 			<section class="container-fluid">
 					<div class="row align-items-center d-flex">
@@ -120,7 +120,7 @@
 					<div class="row d-flex align-items-center">
 						<!-- Image -->
 						<div class="col-md-5">
-							<img class="img-paris" src="images/bicycle.jpg">
+							<img class="img-fluid img-paris" src="images/bicycle.jpg">
 						</div>
 
 						<!-- Formulaire -->
