--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
               <a href="enigme-page.html#enigne_du_mois_precedent" class="nav-link"> Enigmes résolues </a>
             </li>
             <li class="nav-item">
-              <a href="concept_contact.html" class="nav-link"> Règles du jeu </a>
+              <a href="concept_contact.html#concept" class="nav-link"> Règles du jeu </a>
             </li>
             <li class="nav-item">
               <a href="concept_contact.html#contact" class="nav-link"> Votre solution </a>
