--- a/enigme-page.html
+++ b/enigme-page.html
@@ -37,7 +37,7 @@
                 > Enigmes résolues </a>
               </li>
               <li class="nav-item">
-                <a href="concept_contact.html" class="nav-link"> Règles du jeu </a>
+                <a href="concept_contact.html#concept" class="nav-link"> Règles du jeu </a>
               </li>
               <li class="nav-item" >
                 <a href="concept_contact.html#contact" class="nav-link"> Votre solution </a>
@@ -564,11 +564,11 @@
     E N I G M E  P R é C é D E N T E
     ################################
     -->
-    <div class="container-fluid container-enigme-prec">
-      <div class="alert alert-secondary alerte_enigme_prec" role="alert">
+    <div id="enigne_du_mois_precedent" class="alert alert-secondary alerte_enigme_prec" role="alert">
         <h2>L'énigme précédente </h2>
       </div>
-      <div id="enigne_du_mois_precedent" class="row past-enig-pre"> 
+    <div class="container-fluid container-enigme-prec">
+      <div  class="row past-enig-pre"> 
 
         <!--présentation de l'énigme du mois prédédent-->
         <div class="col-lg-12 col-sm-12 col-xs-12">
