--- a/concept_contact.html
+++ b/concept_contact.html
@@ -40,7 +40,7 @@
 											<a href="enigme-page.html#enigne_du_mois_precedent" class="nav-link "> Enigmes résolues </a>
 										</li>
 										<li class="nav-item">
-											<a href="concept_contact.html" class="nav-link  menu-actif"> Règles du jeu </a>
+											<a href="concept_contact.html#concept" class="nav-link  menu-actif"> Règles du jeu </a>
 										</li>
 										<li class="nav-item" >
 											<a href="concept_contact.html#contact" class="nav-link"> Votre solution </a>
@@ -61,7 +61,7 @@
 			<!-- CONCEPT -->
 
 
-			<div id="contact" class="alert alert-secondary titre_h2_solution" role="alert">
+			<div id="concept" class="alert alert-secondary titre_h2_solution" role="alert">
 				<h2> Concept </h2>
 			</div>	
 			<br><br>
@@ -128,7 +128,7 @@
 						<!-- Formulaire -->
 						
 						<div class="col-md-7 d-flex ">
-							<div id="contact" class="contact">
+							<div class="contact">
 								<form action="https://formspree.io/alpaca6wild@gmail.com" method="POST">
 									<div class="input group input-group-lg">
 										<input type="texte" name="name" class="form-control" aria-describedby="sizaing-addon1" placeholder="Nom">
@@ -144,7 +144,7 @@
 									<div class="form-check">
 										<input class="form-check-input" type="radio" value="option1" checked>
 											<label class="form-check-label" for="exampleRadios1">
-														Soumettre une réponse
+														Soumettre une solution
 											</label>
 						
 									</div>
