retouche texte Enigme précédente

--- a/enigme-page.html
+++ b/enigme-page.html
@@ -561,8 +561,10 @@
 
         <!--présentation de l'énigme du mois prédédent-->
         <div class="col-lg-12 col-sm-12 col-xs-12">
-          <h3>Titre de l'énigme</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipisci</p>
+          <h3>Le mystère de la butte Montmartre</h3>
+          <p>Dans ce jeu de piste, improvisez-vous détective et aidez la police à cerner la personnalité d’un cambrioleur hors norme. Il vous faudra rivaliser avec l’esprit de déduction d’un Sherlock Holmes ou d’un Hercule Poirot pour récolter suffisamment d’indices et découvrir l’auteur de ces vols en série et autres délits.</p>
+          <p>Voilà les faits…</p>
+          <p>Depuis quelques mois, un mystérieux cambrioleur donne du fil à retordre au commissariat du XVIIIème arrondissement de Paris. L’affaire est un véritable casse-tête. Une série de vol sans cohérence met Paris en émoi ! Montmartrois et touristes se passionnent pour ce cambrioleur hors norme.</p>
         </div>
       </div>
       <!--fin de la présentation-->
@@ -583,7 +585,8 @@
           <img src="images/Abdou-Rahim.png" alt=".img-gagnant" class="img-gagnant rounded-circle">
         </div><!--historique de l'énigme prédédente-->
         <div class="col-lg-8 col-md-6 col-sm-12 col-xs-12 last-winner">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enimLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p>Le mystère de la butte Montmartre: Le concept est génial!</p>
+          <p>Le concept est génial: une petite histoire fil conducteur, on se distrait tout en apprenant quelques generalités et anecdotes sur le quartier.</p>
         </div>
       </div>
         <!--fin de la présentation-->
