modification margin css general, page enigme contenu

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
       <div class="alert alert-secondary titre_h2_about" role="alert">
           <h2>Le maitre du jeu</h2>
       </div>
-      <div class="row pt-4 pl-4 pr-4">
+      <div class="row pt-4 pl-4 pr-4 margin_general">
         <div class="col-md-4 d-flex justify-content-center align-items-center">
           <img src="images/about_wildo.jpg" class="img-fluid rounded pl-4 img-about" alt="#">
         </div>
@@ -84,7 +84,7 @@
 
 
 
-    <div class="row mt-lg-5">
+    <div class="row mt-lg-5 ">
       <div class="col-md-4 mb-5">
         <div class="d-flex justify-content-center">
           <div class="card" style="width: 18rem;">
