--- a/enigme-page.html
+++ b/enigme-page.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="compiled/flipclock.css"> <!-- Script pour le compte a rebour -->
       <link rel="stylesheet" href="general.css">
       <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+
       
       <title>La Chambre Noire - enigmes</title>
     </head>
@@ -66,12 +67,13 @@
         <div class="alert alert-secondary titre_h2_enigme" role="alert">
            <h2>L'énigme du mois</h2>
         </div>
-        <div class="row encours_titre_enigme">
-          <div class="col-lg-4">
-              <h3>Titre de l'énigme</h3>
+        <div class="row encours_titre_enigme margin_general align-items-start">
+          <div class="col-lg-4 center_general">
+              <h3>La Disparition</h3>
+              <hr/>
           </div>
-          <div class="col-lg-8">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <div class="col-lg-8 center_general">
+            <p>Ce matin, un drame est survenue dans notre belle capitale. La tour Eiffel, joyau de l'exposition universelle de 1889 a disparu.. Wildo Coda a besoin de votre aide pour résoudre ce mystère, ou est le monument préféré des parisiens? Quelques indices ont été trouvé sur les lieux par Wildo : une boite en fer blanc cabossée avec à l'intérieur une pellicule photo et un mot signé Flash Kodak. Voici ci-dessous les photos développées et géocoalisées afin de vous aider dans vos recherches.</p>
           </div>
         </div>
       </section>
@@ -568,12 +570,15 @@
       <div class="alert alert-secondary alerte_enigme_prec" role="alert">
         <h2>L'énigme précédente </h2>
       </div>
-      <div id="enigne_du_mois_precedent" class="row past-enig-pre"> 
+      <div id="enigne_du_mois_precedent" class="row past-enig-pre margin_general"> 
 
         <!--présentation de l'énigme du mois prédédent-->
-        <div class="col-lg-12 col-sm-12 col-xs-12">
-          <h3>Titre de l'énigme</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipisci</p>
+        <div class="col-lg-4 col-sm-12 col-xs-12">
+          <h3>En haut de la butte</h3>
+          <hr/>
+        </div>
+        <div class="col-lg-8">
+          <p>Ce matin, un drame est survenue dans notre belle capitale. La tour Eiffel, joyau de l'exposition universelle de 1889 a disparu.. Wildo Coda a besoin de votre aide pour résoudre ce mystère, ou est le monument préféré des parisiens? Quelques indices ont été trouvé sur les lieux par Wildo : une boite en fer blanc cabossée avec à l'intérieur une pellicule photo et un mot signé Flash Kodak. Voici ci-dessous les photos développées et géocoalisées afin de vous aider dans vos recherches.</p>
         </div>
       </div>
       <!--fin de la présentation-->
@@ -581,12 +586,12 @@
      <!--  <div class="row past-enig-pre">
         <div class="col-lg-12 "><h4>Gagnant du mois précédent</h4></div>
       </div> -->
-      <div class="row past-enig-pre align-items-center">
+      <div class="row past-enig-pre align-items-center margin_general">
         <div class="col-lg-2  col-md-2 col-sm-6 col-xs-12 last-winner  align-self-center">
           <h5>Gagnant du mois précédent</h5>
           <div>
-            <h4><strong>Nom</strong></h4>
-            <h4><strong>Prénom</strong></h4>
+            <h4><strong>Gaboriau</strong></h4>
+            <h4><strong>Wildo</strong></h4>
           </div>
           
         </div>
