--- a/concept_contact.html
+++ b/concept_contact.html
@@ -66,7 +66,7 @@
 			</div>	
 			<br><br>
 			<section class="container-fluid">
-					<div class="row align-items-center d-flex">
+					<div class="row align-items-center d-flex margin_general">
 						<div class="col-md-5">
 							<img src="https://via.placeholder.com/450x350" class="img-fluid centrer_photo">
 						</div>
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 					<h2 id="title_roles">Les règles</h2>
-					<div class="row align-items-center">
+					<div class="row align-items-center margin_general">
 						<div class="col-md-2 p-3">
 							<img src="images/number-1.png" class="centrer_number">
 						</div>
@@ -119,7 +119,7 @@
 				</div>	
 				<br><br>
 				<div class="container-fluid">
-					<div class="row d-flex align-items-center">
+					<div class="row d-flex align-items-center margin_general">
 						<!-- Image -->
 						<div class="col-md-5">
 							<img class="img-paris" src="images/bicycle.jpg">
