--- a/enigme-page.html
+++ b/enigme-page.html
@@ -1061,7 +1061,7 @@
                       </a>
                       <img class="prec_img_enigme" src="images/photo11.jpg" alt="#"/>
                     
-                      <div class="modal  fade " id="myModal1-prec">
+                      <div class="modal fade right" id="myModal1-prec">
                         <div class="modal-dialog modal-dialog-centered">
                           <div class="modal-content">
                           
