conflit concept résolu git add concept_contact.html

--- a/concept_contact.html
+++ b/concept_contact.html
@@ -65,11 +65,9 @@
 				<h2> Concept </h2>
 			</div>	
 			<section class="container-fluid">
-<<<<<<< HEAD
-					<div class="row align-items-center d-flex margin_general">
-=======
-					<div class="row align-items-center d-flex pt-3">
->>>>>>> 8a1abfdaba8ff7b7ddfbea4846a73ec30f4b9130
+
+					<div class="row align-items-center d-flex pt-3 margin_general">
+
 						<div class="col-md-5">
 							<img src="images/concept.jpg" class="img-fluid centrer_photo rounded">
 						</div>
@@ -80,11 +78,8 @@
 						</div>
 					</div>
 					<h2 id="title_roles">Les règles</h2>
-<<<<<<< HEAD
-					<div class="row align-items-center margin_general">
-=======
-					<div class="row align-items-center pb-3">
->>>>>>> 8a1abfdaba8ff7b7ddfbea4846a73ec30f4b9130
+
+					<div class="row align-items-center pb-3 margin_general">
 						<div class="col-md-2 p-3">
 							<img src="images/number-1.png" class="centrer_number">
 						</div>
