solution a place de reponse dans le footer

--- a/enigme-page.html
+++ b/enigme-page.html
@@ -31,7 +31,7 @@
 
             <ul class="navbar-nav ml-auto navbar-menu">
               <li class="nav-item">
-                <a href="enigme-page.html" class="nav-link menu-actif"  > L'énigme du mois </a>
+                <a href="enigme-page.html" class="nav-link menu-actif">L'énigme du mois </a>
               </li>
               <li class="nav-item">
                 <a href="enigme-page.html#enigne_du_mois_precedent" class="nav-link"id="first-element" data-target ="#first-element"
@@ -1395,7 +1395,7 @@
               <ul>
                 <li><a href="enigme-page.html">L'énigme du mois</a></li>
                 <li><a href="concept_contact.html">Règles du jeu</a></li>
-                <li><a href="concept_contact.html#contact">Votre réponse</a></li>
+                <li><a href="concept_contact.html#contact">Votre solution</a></li>
                 <li><a href="about.html">Le maitre du jeu</a></li>
               </ul>
             </div>
