--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 <ul>
                   <li><a href="enigme-page.html">L'énigme du mois</a></li>
                   <li><a href="concept_contact.html">Règles du jeu</a></li>
-                  <li><a href="concept_contact.html#contact">Votre réponse</a></li>
+                  <li><a href="concept_contact.html#contact">Votre solution</a></li>
                   <li><a href="about.html">Le maitre du jeu</a></li>
                 </ul>
               </div>
